--- a/index.html
+++ b/index.html
@@ -7,8 +7,56 @@
   <title>Data Warehouse</title>
   <link rel="stylesheet" href="./reset.css" type="text/css">
   <link rel="stylesheet" href="./style.css" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-  
+  <div class="main-container">
+    <nav class="navbar">
+      <div class="navbar-left">
+        <div class="logo">
+          <div class="logo-circle"></div>
+          <div class="logo-rectangle"></div>
+        </div>
+        <div class="navbar-main">
+          <ul class="navbar-list">
+            <li class="nav-item bold">About</li>
+            <li class="nav-item">Help</li>
+            <li class="nav-item">Features</li>
+            <li class="nav-item">Signup</li>
+          </ul>
+        </div>
+      </div>
+      <div class="navbar-right">
+        <button type="button" class="navbar-btn demo">Request Demo <span class="material-symbols-outlined">
+          arrow_right_alt
+        </span></button>
+      </div>
+    </nav>
+
+    <section class="headline">
+    
+    </section>
+
+    <section class="second-section">
+
+    </section>
+
+    <section class="features">
+
+    </section>
+
+
+    <section class="testimonials">
+    </section>
+
+
+    <footer class="footer">
+      <div class="footer-top"></div>
+      <div class="footer-middle"></div>
+      <div class="footer-bottom"></div>
+    </footer>
+
+
+  </div>
 </body>
 </html>
