--- a/index.html
+++ b/index.html
@@ -27,21 +27,33 @@
         </div>
       </div>
       <div class="navbar-right">
-        <button type="button" class="navbar-btn demo">Request Demo <span class="material-symbols-outlined">
+        <button type="button" class=" bnt navbar-btn demo">Request Demo <span class="material-symbols-outlined">
           arrow_right_alt
         </span></button>
       </div>
     </nav>
 
     <section class="headline">
-    
+      <h1 class="headline-title">Save your data storage</h1>
+      <p class="headline-description">
+        Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others. 
+      </p>
+      <img src="./images/img1.png">
+      <button type="button" class="bnt headline-bnt">Learn More</button>
     </section>
 
     <section class="second-section">
-
+      <div class="section-background">
+        <h2 class="section-title">We are a high-level data storage bank</h2>
+        <p class="section-description"> The place to store various data that you can access at any time through the internet  and where you can carry it. 
+          This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse. 
+        </p>
+        <img src="./images/img2.png">
+    </div>
     </section>
 
     <section class="features">
+      
 
     </section>
 
