--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
           <div class="navbar-main">
             <ul class="navbar-list">
-              <li class="nav-item bold">About</li>
+              <li class="nav-item">About</li>
               <li class="nav-item">Help</li>
               <li class="nav-item">Features</li>
               <li class="nav-item">Signup</li>
@@ -41,11 +41,11 @@
     <header class="headline">
       <div class="container">
         <div class=" flex-headline">
-          <h1 class="headline-title bold">Save your data storage here.</h1>
+          <h1 class="headline-title">Save your data storage here.</h1>
           <p class="headline-description">
             Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others. 
           </p>
-          <button type="button" class="btn headline-btn bold">Learn More</button>
+          <button type="button" class="btn headline-btn">Learn More</button>
         </div>
       </div>
     </header>
