--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <li class="list-item">Q&A</li>
               </ul>
 
-              <div class="nav nav-sm">
+              <ul class="nav nav-sm">
                 <li class="nav-headline">Social Media</li>
                 <li class="nav-icons">
                   <div class="sm-icon fb"></div>
@@ -271,13 +271,7 @@
               </div>
             </div>
           </div>
-          </div>
         </div>
-
-
-        
-
-        
     </footer>
 
 </body>
